--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 ---
-layout: index
+layout: default
+title: "The high quality, completely customizable, performant and 100% free blog template for Jekyll"
+description: "Chalk uses all the best tools and merges them into one premium blogging theme."
 ---
